Update index.html with  presentation

--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <html>
-
 <head>
 <style>
-
 h1 {
-
  color: black;
 }
 </style>
 </head>
-
 <body>
-<h1>coucouc gali</h1>
+<video controls width="250">
+  <source src="https://github.com/TheUlx/TheUlx.github.io/presentation.wbm" type="video/webm" />
 </body>
-
 </html>
