Update index.html for the  src video

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ h1 {
 </head>
 <body>
 <video controls width="250">
-  <source src="https://github.com/TheUlx/TheUlx.github.io/presentation.wbm" type="video/webm" />
+  <source src="http://TheUlx.github.io/presentation.wbm" type="video/webm" />
 </body>
 </html>
