Update index.html video  control

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
 <head>
+ <title> my own show  </title>
 <style>
-h1 {
- color: black;
-}
+
 </style>
 </head>
 <body>
-<video controls width="250">
+<video controls width="100%"  heigh="100%" autoplay controls>
   <source src="http://TheUlx.github.io/presentation.wbm" type="video/webm" />
 </body>
 </html>
