--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <head>
  <title> my own show  </title>
 <style>
-
+body {
+    display: block;
+    margin: 0px;
+    margin-top: ;
+    margin-right: ;
+    margin-bottom: ;
+    margin-left: ;
+}
 </style>
 </head>
 <body>
